syntax = "proto3";
package routerprotocol.routerchain.txlookup;

option go_package = "github.com/router-protocol/sdk-go/routerchain/txlookup/types";

import "routerprotocol/routerchain/multichain/chain_type.proto"; 
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

message AdhocRequest {
    string from = 1;
    repeated string chain_ids = 2;
    repeated string tx_hashes = 3;
    repeated bytes meta_data = 4;
    string middleware_contract_address = 5;
    cosmos.base.v1beta1.Coin processing_fee = 6 [
        (gogoproto.nullable) = false
    ];
    uint64 gas_limit = 7;
}